added pdf and novel

--- a/NIMELSSA about.html
+++ b/NIMELSSA about.html
@@ -10,9 +10,8 @@
         <div class="container">
             <div class="content-section">
                <div class="text-section">
-                  <h1> Our Dream is </h1>
-                    <h1>to Enhance Learning</h1>
-                    <h1>through the Medlab E-Library.</h1>
+                  <h1> Our Dream is to Enhance Learning</h1>
+                    <h1>Through the Medlab E-Library.</h1>
                 
                   <p style="margin-top: 40px;">It is with great pleasure and honor that we welcome each and every one of you to our newly created website.
                     As President, we are delighted to see our community embracing technology and innovation to connect and serve you better.
