--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <img class="img" src="image/m-removebg-preview (1).png">
+        <div class="bar-icon">
         <i class="fa-solid fa-bars-staggered barIcon"></i>
+    </div>
 
         <div class="active">
             <p style="padding: 10px; background-color: black; border-radius: 25px;"><a
@@ -22,7 +24,7 @@
             <p><a href="NIMELSSA 200level.html">200 LVL</a></p>
             <p><a href="NIMELSSA 300level.html">300 LVL</a></p>
             <p><a href="NIMELSSA 400level.html">400 LVL</a></p>
-            <p><a href="medlab 500level.html">500 LVL</a></p>
+            <p><a href="NIMELSSA 500level.html">500 LVL</a></p>
         </div>
     </header>
     <div class="menu">
@@ -32,7 +34,7 @@
     <p><a href="NIMELSSA 200level.html">200 LVL</a></p>
     <p><a href="NIMELSSA 300level.html">300 LVL</a></p>
     <p><a href="NIMELSSA 400level.html">400 LVL</a></p>
-    <p><a href="medlab 500level.html">500 LVL</a></p>
+    <p><a href="NIMELSSA 500level.html">500 LVL</a></p>
     </div>
 
     <div class="main">
@@ -44,7 +46,7 @@
             <p class="emma"> AN INITIATIVE BY THE <span class="followuP">EMMANUEL ANYAMELE LED ADMIN</span></p>
         </div>
         <div class="button">
-            <button>TEXTBOOKS</button>
+            <button><a href="NIMELSSA NOVEL.html">NOVELS</a></button>
             <button><a href="https://www.youtube.com/">WATCH VIDEOS</a></button>
         </div>
     </div>
