--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <p class="emma"> AN INITIATIVE BY THE <span class="followuP">EMMANUEL ANYAMELE LED ADMIN</span></p>
         </div>
         <div class="button">
-            <button><a href="NIMELSSA NOVEL.html">NOVELS</a></button>
-            <button><a href="https://www.youtube.com/">WATCH VIDEOS</a></button>
+            <a href="NIMELSSA NOVEL.html"><button>NOVELS</button></a>
+            <a href="https://www.youtube.com/"><button>WATCH VIDEOS</button></a>
         </div>
     </div>
     <div class="center">
