learn more change

--- a/NIMELSSA 200level.html
+++ b/NIMELSSA 200level.html
@@ -23,7 +23,7 @@
                 <img src="image/all subjects 200.jpeg" alt="all subjects">
                 <div class="menu-item-details">
                     <h3>ALL SUBJECTS</h3>
-                    <p> <a href="200 level/200l first semester past questions.pdf" download="200 level/200l first semester past questions.pdf">Learn More</a></p>
+                    <p> <a href="200 level/200l first semester past questions.pdf" download="200 level/200l first semester past questions.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                 <img src="image/cardiovascular.jpeg" alt="Cardiovascular system lecture">
                 <div class="menu-item-details">
                     <h3>CARDIOVASCULAR SYSTEM LECTURE</h3>
-                    <p> <a href="200 level/Cardiovascular system lecture Nurses Med Lab OPT.pdf" download="200 level/Cardiovascular system lecture Nurses Med Lab OPT.pdf">Learn More</a></p>
+                    <p> <a href="200 level/Cardiovascular system lecture Nurses Med Lab OPT.pdf" download="200 level/Cardiovascular system lecture Nurses Med Lab OPT.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                 <img src="image/embryology.jpeg" alt="Embryology">
                 <div class="menu-item-details">
                     <h3>EMBRYOLOGY</h3>
-                    <p> <a href="200 level/Embryology note.pdf" download="200 level/Embryology note.pdf">Learn More</a></p>
+                    <p> <a href="200 level/Embryology note.pdf" download="200 level/Embryology note.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
