--- a/NIMELSSA 400level.html
+++ b/NIMELSSA 400level.html
@@ -23,7 +23,7 @@
                 <img src="image/spot test.png" alt="PROFESSIONAL SPOT TEST">
                 <div class="menu-item-details">
                     <h3>FIRST PROFESSIONAL SPOT TEST</h3>
-                    <p> <a href="400 level/FIRST PROFESSIONAL SPOT TEST.pdf" download="400 level/FIRST PROFESSIONAL SPOT TEST.pdf">Learn More</a></p>
+                    <p> <a href="400 level/FIRST PROFESSIONAL SPOT TEST.pdf" download="400 level/FIRST PROFESSIONAL SPOT TEST.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                 <img src="image/all subjects 400.jpeg" alt="Past Questions">
                 <div class="menu-item-details">
                     <h3>PAST QUESTIONS</h3>
-                    <p> <a href="400 level/Past Questions-1.pdf" download="400 level/Past Questions-1.pdf">Learn More</a></p>
+                    <p> <a href="400 level/Past Questions-1.pdf" download="400 level/Past Questions-1.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
