--- a/NIMELSSA 500level.html
+++ b/NIMELSSA 500level.html
@@ -22,7 +22,7 @@
                 <img src="image/microbiology.jpeg" alt="microbiology">
                 <div class="menu-item-details">
                     <h3>MICROBIOLOGY</h3>
-                    <p> <a href="500 level/Image to PDF 20241026 16.56.58.pdf" download="500 level/Image to PDF 20241026 16.56.58.pdf">Learn More</a></p>
+                    <p> <a href="500 level/Image to PDF 20241026 16.56.58.pdf" download="500 level/Image to PDF 20241026 16.56.58.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
