--- a/NIMELSSA NOVEL.html
+++ b/NIMELSSA NOVEL.html
@@ -22,7 +22,7 @@
                 <img src="image/Think big.jpeg" alt="Think big">
                 <div class="menu-item-details">
                     <h3>THINK BIG BY BEN CARSON </h3>
-                    <p> <a href="NOVELS/Think Big - Unleashing Your Potential ( PDFDrive ).pdf" download="NOVELS/Think Big - Unleashing Your Potential ( PDFDrive ).pdf">Learn More</a></p>
+                    <p> <a href="NOVELS/Think Big - Unleashing Your Potential ( PDFDrive ).pdf" download="NOVELS/Think Big - Unleashing Your Potential ( PDFDrive ).pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -31,7 +31,7 @@
                 <img src="image/gifted hands.jpeg" alt="Gifted hands">
                 <div class="menu-item-details">
                     <h3>GIFTED HANDS BY BEN CARSON </h3>
-                    <p> <a href="NOVELS/Gifted Hands_ The Ben Carson Story ( PDFDrive ).pdf" download="NOVELS/Gifted Hands_ The Ben Carson Story ( PDFDrive ).pdf">Learn More</a></p>
+                    <p> <a href="NOVELS/Gifted Hands_ The Ben Carson Story ( PDFDrive ).pdf" download="NOVELS/Gifted Hands_ The Ben Carson Story ( PDFDrive ).pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                 <img src="image/a doc in the house.jpeg" alt="A doctor in the house">
                 <div class="menu-item-details">
                     <h3>A DOCTOR IN THE HOUSE BY CANDY CARSON </h3>
-                    <p> <a href="NOVELS/A doctor in the house _ my life with Ben Carson ( PDFDrive ).pdf" download="NOVELS/A doctor in the house _ my life with Ben Carson ( PDFDrive ).pdf">Learn More</a></p>
+                    <p> <a href="NOVELS/A doctor in the house _ my life with Ben Carson ( PDFDrive ).pdf" download="NOVELS/A doctor in the house _ my life with Ben Carson ( PDFDrive ).pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -49,7 +49,7 @@
                 <img src="image/bad science.jpeg" alt="Bad science">
                 <div class="menu-item-details">
                     <h3>BAD SCIENCE BY BEN GOLDACRE </h3>
-                    <p> <a href="NOVELS/Bad Science   ( PDFDrive ).pdf" download="NOVELS/Bad Science   ( PDFDrive ).pdf">Learn More</a></p>
+                    <p> <a href="NOVELS/Bad Science   ( PDFDrive ).pdf" download="NOVELS/Bad Science   ( PDFDrive ).pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                 <img src="image/paradox of choice.png" alt="paradox of choice">
                 <div class="menu-item-details">
                     <h3>THE PARADOX OF CHOICE BY BARRY SCHWARTZ </h3>
-                    <p> <a href="NOVELS/The paradox of choice_ why more is less ( PDFDrive ).pdf" download="NOVELS/The paradox of choice_ why more is less ( PDFDrive ).pdf">Learn More</a></p>
+                    <p> <a href="NOVELS/The paradox of choice_ why more is less ( PDFDrive ).pdf" download="NOVELS/The paradox of choice_ why more is less ( PDFDrive ).pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                 <img src="image/this is going to hurt.jpeg" alt="this is going to hurt">
                 <div class="menu-item-details">
                     <h3>THIS IS GOING TO HURT BY ADAM KAY </h3>
-                    <p> <a href="NOVELS/This is Going to Hurt ( PDFDrive ).pdf" download="NOVELS/This is Going to Hurt ( PDFDrive ).pdf">Learn More</a></p>
+                    <p> <a href="NOVELS/This is Going to Hurt ( PDFDrive ).pdf" download="NOVELS/This is Going to Hurt ( PDFDrive ).pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
