--- a/NIMELSSA 300level.html
+++ b/NIMELSSA 300level.html
@@ -23,7 +23,7 @@
                 <img src="image/all subjects 200.jpeg" alt="all subjects">
                 <div class="menu-item-details">
                     <h3>ALL SUBJECTS</h3>
-                    <p> <a href="300 level/300l_past_questions-1.pdf" download="300 level/300l_past_questions-1.pdf">Learn More</a></p>
+                    <p> <a href="300 level/300l_past_questions-1.pdf" download="300 level/300l_past_questions-1.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -32,7 +32,7 @@
                 <img src="image/all subjects 200.jpeg" alt="all subjects">
                 <div class="menu-item-details">
                     <h3>ALL SUBJECTS</h3>
-                    <p> <a href="300 level/300level past questions courtesy OKORAFOR REAL.pdf" download="300 level/300level past questions courtesy OKORAFOR REAL.pdf">Learn More</a></p>
+                    <p> <a href="300 level/300level past questions courtesy OKORAFOR REAL.pdf" download="300 level/300level past questions courtesy OKORAFOR REAL.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                 <img src="image/biomedical elec.jpeg" alt="Biomedical Electronics Note">
                 <div class="menu-item-details">
                     <h3>BIOMEDICAL ELECTRONICS NOTE</h3>
-                    <p> <a href="300 level/Biomedical Electronics Note.pdf" download="300 level/Biomedical Electronics Note.pdf">Learn More</a></p>
+                    <p> <a href="300 level/Biomedical Electronics Note.pdf" download="300 level/Biomedical Electronics Note.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                 <img src="image/chempath.jpeg" alt="ChemPath">
                 <div class="menu-item-details">
                     <h3>CHEM PATH NOTE</h3>
-                    <p> <a href="300 level/ChemPath_Note.pdf" download="300 level/ChemPath_Note.pdf">Learn More</a></p>
+                    <p> <a href="300 level/ChemPath_Note.pdf" download="300 level/ChemPath_Note.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 <img src="image/embryology.jpeg" alt="GENERAL Pathology">
                 <div class="menu-item-details">
                     <h3>GENERAL PATHOLOGY NOTE</h3>
-                    <p> <a href="300 level/General Pathology ( PDFDrive ).pdf" download="300 level/General Pathology ( PDFDrive ).pdf">Learn More</a></p>
+                    <p> <a href="300 level/General Pathology ( PDFDrive ).pdf" download="300 level/General Pathology ( PDFDrive ).pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                 <img src="image/gen path.jpeg" alt="Immunology">
                 <div class="menu-item-details">
                     <h3>IMMUNOLOGY NOTE</h3>
-                    <p> <a href="300 level/Immunology pdf.pdf" download="300 level/Immunology pdf.pdf">Learn More</a></p>
+                    <p> <a href="300 level/Immunology pdf.pdf" download="300 level/Immunology pdf.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                 <img src="image/instru. in mls.jpeg" alt="Instrumentation In MLS">
                 <div class="menu-item-details">
                     <h3>INSTRUMENTATION In HAEMATOLOGY NOTE</h3>
-                    <p> <a href="300 level/Instrumentation In MLS (Haematology).pdf" download="300 level/Instrumentation In MLS (Haematology).pdf">Learn More</a></p>
+                    <p> <a href="300 level/Instrumentation In MLS (Haematology).pdf" download="300 level/Instrumentation In MLS (Haematology).pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 <img src="image/instru. in mls.jpeg" alt="Instrumentation In MLS">
                 <div class="menu-item-details">
                     <h3>Instrumentation In CHEM PATHOLOGY NOTE</h3>
-                    <p> <a href="300 level/Instrumentation_In_MLS_(Chem._Path).pdf" download="300 level/Instrumentation_In_MLS_(Chem._Path).pdf">Learn More</a></p>
+                    <p> <a href="300 level/Instrumentation_In_MLS_(Chem._Path).pdf" download="300 level/Instrumentation_In_MLS_(Chem._Path).pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                 <img src="image/haematology.jpeg" alt="Introduction In MLS">
                 <div class="menu-item-details">
                     <h3>INTRODUCTION In HAEMATOLOGY NOTE</h3>
-                    <p> <a href="300 level/Introduction_To_MLS_(Haematology).pdf" download="300 level/Introduction_To_MLS_(Haematology).pdf">Learn More</a></p>
+                    <p> <a href="300 level/Introduction_To_MLS_(Haematology).pdf" download="300 level/Introduction_To_MLS_(Haematology).pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                 <img src="image/pathology.jpeg" alt="Introduction to Pathology">
                 <div class="menu-item-details">
                     <h3>INTRODUCTION TO PATHOLOGY NOTE</h3>
-                    <p> <a href="300 level/INTRODUCTION TO PATH. PTH322.pdf" download="300 level/INTRODUCTION TO PATH. PTH322.pdf">Learn More</a></p>
+                    <p> <a href="300 level/INTRODUCTION TO PATH. PTH322.pdf" download="300 level/INTRODUCTION TO PATH. PTH322.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                 <img src="image/microbiology.jpeg" alt="microbiology part of MLS procedure">
                 <div class="menu-item-details">
                     <h3>MICROBIOLOGY PART OF MLS PROCEDURE NOTE</h3>
-                    <p> <a href="300 level/microbiology part of MLS procedure.pdf" download="300 level/microbiology part of MLS procedure.pdf">Learn More</a></p>
+                    <p> <a href="300 level/microbiology part of MLS procedure.pdf" download="300 level/microbiology part of MLS procedure.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                 <img src="image/mls lab posting .jpeg" alt="MLS LAB POSTING 2">
                 <div class="menu-item-details">
                     <h3>MLS LAB POSTING 2 NOTE</h3>
-                    <p> <a href="300 level/MLS_310_LAB_POSTING_2.pdf" download="300 level/MLS_310_LAB_POSTING_2.pdf">Learn More</a></p>
+                    <p> <a href="300 level/MLS_310_LAB_POSTING_2.pdf" download="300 level/MLS_310_LAB_POSTING_2.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                 <img src="image/haematology.jpeg" alt="MLS 332 HAEMATOLOGY">
                 <div class="menu-item-details">
                     <h3>MLS 332 HAEMATOLOGY</h3>
-                    <p> <a href="300 level/Mls_332_Hematology-1.pdf" download="300 level/Mls_332_Hematology-1.pdf">Learn More</a></p>
+                    <p> <a href="300 level/Mls_332_Hematology-1.pdf" download="300 level/Mls_332_Hematology-1.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                 <img src="image/pharmacology.jpeg" alt="Pharmacology">
                 <div class="menu-item-details">
                     <h3>PHARMACOLOGY II NOTE</h3>
-                    <p> <a href="300 level/Pharmacology II Note.pdf" download="300 level/Pharmacology II Note.pdf">Learn More</a></p>
+                    <p> <a href="300 level/Pharmacology II Note.pdf" download="300 level/Pharmacology II Note.pdf">Download</a></p>
                     <span class="price">$0.00</span>
                 </div>
             </div>
