powered by fentech

--- a/NIMELSSA 300level.html
+++ b/NIMELSSA 300level.html
@@ -180,5 +180,5 @@
         </script>
         <footer>
             <p>&copy; 2024 Fentech. All rights reserved.</p>
-            <p>&copy; Compiled by FENTECH</p>
+            <p>&copy; POWERED BY FENTECH</p>
         </footer>
