--- a/NIMELSSA about.html
+++ b/NIMELSSA about.html
@@ -31,7 +31,7 @@
 <a href="index.html"><button class="button" class="btn">Back</button></a>
 <footer>
     <p style="margin-bottom: 10px;">&copy; 2024 Fentech. All rights reserved.</p>
-    <p>&copy; <B>Compiled By FENTECH</B> </p>
+    <p>&copy; <B>POWERED BY FENTECH</B> </p>
 </footer>
 
     </body>
