--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <div class="center">
         <footer>
-            <p>&copy; <B>Compiled By FENTECH</B> </p>
+            <p>&copy; <B>POWERED BY FENTECH</B> </p>
         </footer>
 
 
