--- a/NIMELSSA 100level.html
+++ b/NIMELSSA 100level.html
@@ -331,5 +331,5 @@
         </script>
         <footer>
             <p>&copy; 2024 Fentech. All rights reserved.</p>
-            <p>&copy; Compiled by FENTECH</p>
+            <p>&copy; POWERED BY FENTECH</p>
         </footer>
