--- a/NIMELSSA 500level.html
+++ b/NIMELSSA 500level.html
@@ -17,6 +17,7 @@
         </header>
     
         <h2 id="First Semester" class="menu-cart-tittle">FIRST SEMESTER</h2>
+    <div class="sec">
         <section >
             <div class="menu-item">
                 <img src="image/microbiology.jpeg" alt="microbiology">
@@ -27,9 +28,10 @@
                 </div>
             </div>
         </section>
+    </div>
 
             <a href="index.html">
-                <button class="btn" style="margin-top: 20px; border: none; padding: 15px 10px; width: 120px; font-size: 1.1rem; border-radius: 25px;">Back</button>
+                <button class="btn" style="margin-top: 20px; border: none; padding: 15px 10px; margin-left: 20px; width: 120px; font-size: 1.1rem; border-radius: 25px;">Back</button>
              </a>
             </section>
 
@@ -61,5 +63,5 @@
         </script>
         <footer>
             <p>&copy; 2024 Fentech. All rights reserved.</p>
-            <p>&copy; POWERED BY FENTECH</p>
+            <p> POWERED BY FENTECH</p>
         </footer>
