--- a/NIMELSSA 300level.html
+++ b/NIMELSSA 300level.html
@@ -18,6 +18,7 @@
         </header>
     
         <h2 id="First Semester" class="menu-cart-tittle">FIRST SEMESTER</h2>
+        <div class="sec">
         <section >
             <div class="menu-item">
                 <img src="image/all subjects 200.jpeg" alt="all subjects">
@@ -148,9 +149,10 @@
             </div>
 
             <a href="index.html">
-                <button class="btn" style="margin-top: 20px; border: none; padding: 15px 10px; width: 120px; font-size: 1.1rem; border-radius: 25px;">Back</button>
+                <button class="btn" style="margin-top: 20px; border: none; margin-left: 20px; padding: 15px 10px; width: 120px; font-size: 1.1rem; border-radius: 25px;">Back</button>
              </a>
             </section>
+        </div>
 
         <style>
             .btn:hover{
@@ -180,5 +182,5 @@
         </script>
         <footer>
             <p>&copy; 2024 Fentech. All rights reserved.</p>
-            <p>&copy; POWERED BY FENTECH</p>
+            <p> POWERED BY FENTECH</p>
         </footer>
