--- a/NIMELSSA 400level.html
+++ b/NIMELSSA 400level.html
@@ -18,6 +18,7 @@
         </header>
     
         <h2 id="First Semester" class="menu-cart-tittle">NOTES</h2>
+        <div class="sec">
         <section >
             <div class="menu-item">
                 <img src="image/spot test.png" alt="PROFESSIONAL SPOT TEST">
@@ -40,9 +41,10 @@
                 </div>
             </div>
         </section>  
+    </div>
            
             <a href="index.html">
-                <button class="btn" style="margin-top: 20px; border: none; padding: 15px 10px; width: 120px; font-size: 1.1rem; border-radius: 25px;">Back</button>
+                <button class="btn" style="margin-top: 20px; border: none; margin-left: 20px; padding: 15px 10px; width: 120px; font-size: 1.1rem; border-radius: 25px;">Back</button>
              </a>
             </section>
 
@@ -74,5 +76,5 @@
         </script>
         <footer>
             <p>&copy; 2024 Fentech. All rights reserved.</p>
-            <p>&copy; POWERED BY FENTECH</p>
+            <p> POWERED BY FENTECH</p>
         </footer>
