added president picture

--- a/NIMELSSA about.html
+++ b/NIMELSSA about.html
@@ -11,11 +11,15 @@
             <div class="content-section">
                <div class="text-section">
                   <h1> Our Dream is to Enhance Learning</h1>
-                    <h1>Through the Medlab E-Library.</h1>
+                    <h1>Through the Medlab E-Library: <span>President Emmanuel</span></h1>
+                <div class="card">
+                    <img src="image/p.jpg">
+                </div>
                 
                   <p style="margin-top: 40px;">It is with great pleasure and honor that we welcome each and every one of you to our newly created website.
                     As President, we are delighted to see our community embracing technology and innovation to connect and serve you better.
-                    This website is a testament to our commitment to providing accessible and efficient services to all our citizens. 
+                    This website is a testament to our commitment to providing accessible and efficient services to all our citizens.
+                    This Project is also supported by the Liberian <span class="followuP"> COMR. JOHN KINGSLEY. </span>
                     We encourage you to explore the various features and resources available on the website.
                     Your feedback and suggestions are valuable as we strive to continuously improve and tailor our services to meet your expectations.
                     Together let us make the most out of this digital platform to stregthen our community, foster collaborationand enhance the quality of life for all Medlab citizens.
@@ -25,13 +29,13 @@
     </div>
       <div class="image-section">
         <img src="image/IMG-20241017-WA0097.jpg">
-        <h2>Warm Regards, <br /> Emmanuel Anyamele Led Admin.</h2>   
+        <h2>Warm Regards, <br /> Comr. Anyamele Emmanuel Led Admin.</h2>   
     </div>
 </div>
 <a href="index.html"><button class="button" class="btn">Back</button></a>
 <footer>
     <p style="margin-bottom: 10px;">&copy; 2024 Fentech. All rights reserved.</p>
-    <p>&copy; <B>POWERED BY FENTECH</B> </p>
+    <p> <B>POWERED BY FENTECH</B> </p>
 </footer>
 
     </body>
