--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="title">
             <h1> WELCOME!!</h1>
             <h2> TO THE MED LAB E-LIBRARY</h2>
-            <p class="emma"> AN INITIATIVE BY THE <span class="followuP">EMMANUEL ANYAMELE LED ADMIN</span></p>
+            <p class="emma"> AN INITIATIVE BY <span class="followuP"> COMR. ANYAMELE EMMANUEL LED ADMIN 2023/2024 SESSION</span></p>
         </div>
         <div class="button">
             <a href="NIMELSSA NOVEL.html"><button>NOVELS</button></a>
