--- a/NIMELSSA NOVEL.html
+++ b/NIMELSSA NOVEL.html
@@ -106,5 +106,5 @@
         </script>
         <footer>
             <p>&copy; 2024 Fentech. All rights reserved.</p>
-            <p>&copy; POWERED BY FENTECH</p>
+            <p> POWERED BY FENTECH</p>
         </footer>
