--- a/NIMELSSA about.html
+++ b/NIMELSSA about.html
@@ -19,7 +19,7 @@
                   <p style="margin-top: 40px;">It is with great pleasure and honor that we welcome each and every one of you to our newly created website.
                     As President, we are delighted to see our community embracing technology and innovation to connect and serve you better.
                     This website is a testament to our commitment to providing accessible and efficient services to all our citizens.
-                    This Project is also supported by the Liberian <span class="followuP"> COMR. JOHN KINGSLEY. </span>
+                    This Project is also supported by the Librarian <span class="followuP"> COMR. JOHN KINGSLEY. </span>
                     We encourage you to explore the various features and resources available on the website.
                     Your feedback and suggestions are valuable as we strive to continuously improve and tailor our services to meet your expectations.
                     Together let us make the most out of this digital platform to stregthen our community, foster collaborationand enhance the quality of life for all Medlab citizens.
