--- a/NIMELSSA 500level.html
+++ b/NIMELSSA 500level.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="https://drive.google.com/file/d/1AoRtrIUGJCd5lgXNpBUUo9NcM1IE9Zxq/view?usp=drive_link" alt="CONCEPT OF LIGHT MICROSCOPE">
+                <img src="image/medlab.png" alt="CONCEPT OF LIGHT MICROSCOPE">
                 <div class="menu-item-details">
                     <h3>CONCEPT OF LIGHT MICROSCOPE</h3>
                     <p> <a href="https://drive.google.com/file/d/1NVazzM-8GSfz8kHM6f7u_tIN5dmEkn2K/view?usp=drive_link" download="https://drive.google.com/file/d/1NVazzM-8GSfz8kHM6f7u_tIN5dmEkn2K/view?usp=drive_link">Download</a></p>  
