--- a/NIMELSSA 400level.html
+++ b/NIMELSSA 400level.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="https://drive.google.com/file/d/1Uy2dSb4mFtR5WWaabf7Biuk-BpKrK0wl/view?usp=drive_link" alt="Histopathology">
+                <img src="image/histopathology.jpeg" alt="Histopathology">
                 <div class="menu-item-details">
                     <h3>HISTOPATHOLOGY</h3>
                     <p> <a href="https://drive.google.com/file/d/1Ww0gX_PTPVkMiruy5x_dUqI5HTGQp0Vu/view?usp=drive_link" download="https://drive.google.com/file/d/1Ww0gX_PTPVkMiruy5x_dUqI5HTGQp0Vu/view?usp=drive_link">Download</a></p>
@@ -37,7 +37,7 @@
                 </div>
             </div>
              <div class="menu-item">
-                <img src="https://drive.google.com/file/d/1ec3kgmchoJB11Gr-cN8V5VpUEm6nOE__/view?usp=drive_link" alt="ANTICOAGULANTS">
+                <img src="image/anticoagulants.jpeg" alt="ANTICOAGULANTS">
                 <div class="menu-item-details">
                     <h3>ANTICOAGULANTS</h3>
                     <p> <a href="https://docs.google.com/document/d/1WvJG9PBS570RpIeyrecUuq5-8yVu3OyM/edit?usp=drive_link&ouid=100874229120855254651&rtpof=true&sd=true" download="https://docs.google.com/document/d/1WvJG9PBS570RpIeyrecUuq5-8yVu3OyM/edit?usp=drive_link&ouid=100874229120855254651&rtpof=true&sd=true">Download</a></p>
@@ -45,7 +45,7 @@
                 </div>
             </div>
              <div class="menu-item">
-                <img src="https://drive.google.com/file/d/1Xbb97eyQ9JyyEwIfpbCf_V8acG9WXMA3/view?usp=drive_link" alt="PRESENTATION ON FORENSIC SCIENCE">
+                <img src="image/forensicscience.jpeg" alt="PRESENTATION ON FORENSIC SCIENCE">
                 <div class="menu-item-details">
                     <h3>PRESENTATION ON FORENSIC SCIENCE</h3>
                     <p> <a href="https://docs.google.com/presentation/d/1Wv0BB1h-wj8VY46X-ZMSqtK6XmYnB3Zm/edit?usp=drive_link&ouid=100874229120855254651&rtpof=true&sd=true" download="https://docs.google.com/presentation/d/1Wv0BB1h-wj8VY46X-ZMSqtK6XmYnB3Zm/edit?usp=drive_link&ouid=100874229120855254651&rtpof=true&sd=true">Download</a></p>
@@ -53,7 +53,7 @@
                 </div>
             </div>
              <div class="menu-item">
-                <img src="https://drive.google.com/file/d/1Xbb97eyQ9JyyEwIfpbCf_V8acG9WXMA3/view?usp=drive_link" alt="FORENSIC SCIENCE">
+                <img src="image/forensicscience.jpeg" alt="FORENSIC SCIENCE">
                 <div class="menu-item-details">
                     <h3>FORENSIC SCIENCE</h3>
                     <p> <a href="https://drive.google.com/file/d/1Wb7notXElOX2OHEUUGLWmsINCN8ZQD7y/view?usp=drive_link" download="https://drive.google.com/file/d/1Wb7notXElOX2OHEUUGLWmsINCN8ZQD7y/view?usp=drive_link">Download</a></p>
@@ -61,7 +61,7 @@
                 </div>
             </div>
              <div class="menu-item">
-                <img src="https://drive.google.com/file/d/1W0-V-hYkBuSvC2JrO8jJj5DgmXlvYyOc/view?usp=drive_link" alt="BACTERIOLOGY">
+                <img src="image/bacteriology.jpeg" alt="BACTERIOLOGY">
                 <div class="menu-item-details">
                     <h3>BACTERIOLOGY</h3>
                     <p> <a href="https://drive.google.com/file/d/1WhkmHCcM5A_TmLTUjAWgaoQgbhppyZGD/view?usp=drive_link" download="https://drive.google.com/file/d/1WhkmHCcM5A_TmLTUjAWgaoQgbhppyZGD/view?usp=drive_link">Download</a></p>
@@ -69,7 +69,7 @@
                 </div>
             </div>
              <div class="menu-item">
-                <img src="https://drive.google.com/file/d/1eujsosblFMqWUZgvAoVN4oSAWalfNMtr/view?usp=drive_link" alt="FUNGI MORPHOLOGY">
+                <img src="image/fungi.jpeg" alt="FUNGI MORPHOLOGY">
                 <div class="menu-item-details">
                     <h3>FUNGI MORPHOLOGY</h3>
                     <p> <a href="https://drive.google.com/file/d/1Wj0oYKzC4vk64xs8dml4Nwoa_K_HejWX/view?usp=drive_link" download="https://drive.google.com/file/d/1Wj0oYKzC4vk64xs8dml4Nwoa_K_HejWX/view?usp=drive_link">Download</a></p>
@@ -77,7 +77,7 @@
                 </div>
             </div>
              <div class="menu-item">
-                <img src="https://drive.google.com/file/d/1sOKdCipifSQULikfDaYfZA1iy4JHLqso/view?usp=drive_link" alt="IMMUNOHAEMATOLOGY">
+                <img src="image/immunohaematology.jpeg" alt="IMMUNOHAEMATOLOGY">
                 <div class="menu-item-details">
                     <h3>IMMUNOHAEMATOLOGY</h3>
                     <p> <a href="https://drive.google.com/file/d/1Wpdub4gv9CRCF1CfgcXYfTJeJBgNF8sD/view?usp=drive_link" download="https://drive.google.com/file/d/1Wpdub4gv9CRCF1CfgcXYfTJeJBgNF8sD/view?usp=drive_link">Download</a></p>
@@ -85,7 +85,7 @@
                 </div>
             </div>
              <div class="menu-item">
-                <img src="https://drive.google.com/file/d/10roJ3XFaBDRgOp68HsmRT4wJdmytFXXO/view?usp=drive_link" alt="STERILIZATION MMP">
+                <img src="image/sterilization.jpeg" alt="STERILIZATION MMP">
                 <div class="menu-item-details">
                     <h3>STERILIZATION MMP</h3>
                     <p> <a href="https://drive.google.com/file/d/1W_11heqbv04MmnBOHZy8A2baQI1LddHB/view?usp=drive_link" download="https://drive.google.com/file/d/1W_11heqbv04MmnBOHZy8A2baQI1LddHB/view?usp=drive_link">Download</a></p>
@@ -93,7 +93,7 @@
                 </div>
             </div>
              <div class="menu-item">
-                <img src="https://drive.google.com/file/d/14S0UGaTZwk1Zl-3JafdJ5l1--hmQVXBM/view?usp=drive_link" alt="CHP 411">
+                <img src="image/medlab.png" alt="CHP 411">
                 <div class="menu-item-details">
                     <h3>CHP 411 LECTURE NOTES</h3>
                     <p> <a href="https://drive.google.com/file/d/1WXwARMcHV_IdD-RWmGtSPaR_GnvXGFBN/view?usp=drive_link" download="https://drive.google.com/file/d/1WXwARMcHV_IdD-RWmGtSPaR_GnvXGFBN/view?usp=drive_link">Download</a></p>
@@ -101,7 +101,7 @@
                 </div>
             </div>
              <div class="menu-item">
-                <img src="https://drive.google.com/file/d/14S0UGaTZwk1Zl-3JafdJ5l1--hmQVXBM/view?usp=drive_link" alt="CHP 411">
+                <img src="image/medlab.png" alt="CHP 411">
                 <div class="menu-item-details">
                     <h3>CHP 411</h3>
                     <p> <a href="https://drive.google.com/file/d/1X5YnuQ-QxHWcFdNIFFzDOKN3TnyFy5D9/view?usp=drive_link" download="https://drive.google.com/file/d/1X5YnuQ-QxHWcFdNIFFzDOKN3TnyFy5D9/view?usp=drive_link">Download</a></p>
