--- a/NIMELSSA 200level.html
+++ b/NIMELSSA 200level.html
@@ -77,7 +77,7 @@
             </div>
 
          <div class="menu-item">
-                <img src="image/ent.jpeg" alt="BCM 211">
+                <img src="image/biochem.jpeg" alt="BCM 211">
                 <div class="menu-item-details">
                     <h3>BCM 211</h3>
                     <p> <a href="https://drive.google.com/file/d/1Xh6E3L3gyDr__haFKVny893jrHgau01O/view?usp=drive_link" download="https://drive.google.com/file/d/1Xh6E3L3gyDr__haFKVny893jrHgau01O/view?usp=drive_link">Download</a></p>
@@ -86,9 +86,9 @@
             </div>
 
         <div class="menu-item">
-                <img src="image/ent.jpeg" alt="MODERN BIOCHEMISTRY">
+                <img src="image/medbiochem.jpeg" alt="MEDICAL BIOCHEMISTRY">
                 <div class="menu-item-details">
-                    <h3>MODERN BIOCHEMISTRY</h3>
+                    <h3>MEDICAL BIOCHEMISTRY</h3>
                     <p> <a href="https://drive.google.com/file/d/1XhJuRignYzO6aI0acu0iJ0mSQqaJ6sXk/view?usp=drive_link" download="https://drive.google.com/file/d/1XhJuRignYzO6aI0acu0iJ0mSQqaJ6sXk/view?usp=drive_link">Download</a></p>
                     
                 </div>
